@@ -1,3 +1,10 @@
+2014-06-10  Richard Earnshaw  <rearnsha@arm.com>
+
+	* libc/machine/aarch64/strchr.S: New file
+	* libc/machine/aarch64/strchr-stub.c: New file
+	* libc/machine/aarch64/Makefile.am: Add them to build list.
+	* libc/machine/aarch64/Makefile.in: Regenerated.
+
 2014-06-09  DJ Delorie  <dj@redhat.com>
 
 	* configure.host (default_newlib_nano_malloc): New.
